manifests/02-vm-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    kubevirt.io/domain: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
