manifests/03-vm-database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    kubevirt.io/domain: database
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
