manifests/01-vm-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    kubevirt.io/domain: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: devuser2-application
spec:
  to:
    name: frontend
    weight: 100
    kind: Service
  host: ''
  path: ''
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080
  alternateBackends: []
